tests/tests/ui/err/multiple-export-dirs.rs
use logos::Logos;

#[derive(Logos)]
#[logos(export_dir = "target/tmp")]
#[logos(export_dir = "target/tmp")]
enum Token {}

fn main() {}
